# image-reconstruction

./: .gitignore  LICENSE  README.md  rewrite.py  ty.toml
gpu_local/: README.md  pyproject.toml  run.py
gpu_local/src/evolutionary_art_gpu/: ablation.py  optimizer.py  pipeline.py  visualization.py
gpu_local/src/iterative_art_gpu/: __init__.py  ablation.py  constants.py  exporters.py  models.py  optimizer.py  pipeline.py  renderer.py  visualization.py
python/: compare.py  final_reconstruct_eval.py  full_run_gpu.ipynb  full_run_gpu.py  pyproject.toml  python_repomix-updated.xml  python_repomix.xml  run.py
python/outputs/: internet_graphic_quality_vs_budget.csv  run_stats.json
python/outputs/demo_viz/: internet_graphic_live_demo.json  internet_landscape_live_demo.json  internet_portrait_live_demo.json  internet_sequence_live_demo.json
python/outputs/stage_checkpoints/: accuracy_registry.jsonl
python/outputs/stage_checkpoints/face_20260330_210621/: run_metrics.json  stage_a.json  stage_b.json  stage_c.json  stage_d.json  stage_final.json
python/outputs/stage_checkpoints/face_20260331_083852/: run_metrics.json  stage_foundation.json
python/outputs/stage_checkpoints/face_20260331_084128/: run_metrics.json  stage_foundation.json
python/outputs/stage_checkpoints/face_20260331_092700/: run_metrics.json  stage_foundation.json
python/outputs/stage_checkpoints/face_20260401_173448/: run_metrics.json  stage_detail.json  stage_foundation.json  stage_structure.json
python/outputs/stage_checkpoints/grape_20260329_184105/: run_metrics.json  stage_b.json  stage_final.json
python/outputs/stage_checkpoints/grape_20260331_081907/: run_metrics.json  (+3 more)
python/scripts/: build_python_repomix.py  generate_doc_figures.py  interrupt_timeout.py  render_internet_demo.py  verify_phase7_updates.py  verify_pptx.py
python/src/: __init__.py  canvas.py  core_renderer.py  display.py  image_loader.py  live_optimizer.py  live_phase7.py  live_refiner.py  live_renderer.py  live_schedule.py  mse.py  optimizer.py  output_tools.py  polygon.py  population.py  preprocessing.py  renderer.py
python/tests/: test_live_optimizer.py  test_live_renderer.py  test_mse.py  test_optimizer.py  test_phase2_color.py  test_phase3_live_growth.py  test_phase3_polygon_strategies.py  test_phase4_live_multires.py  test_phase4_population.py  test_phase5_live.py  test_phase5_live_shapes.py  test_phase6_live_residual.py  test_phase7_live.py  test_preprocessing.py  test_refiner_live.py  test_renderer.py
submission_stage/evolutionary-art/python/: demo.py  pyproject.toml
(+93 files in other folders)
